# GenMetadata

./: .gitignore  README.md  deploy.py  libclang.lib
cpp/: CMakeLists.txt  main.cpp  object.h  test.h  types.cpp  types.h
example/: CMakeLists.txt  basics.cpp  basics.h  build.bat  main.cpp  memory_pool.h  object.h  object_pools.cpp  object_pools.h  test.h  types.cpp  types.h
src/: app_params.rs  main.rs
test/: test.h
